# ego_v2_with_comments

swarm-playground/main_ws/devel/: .catkin  local_setup.sh  setup.sh
swarm-playground/main_ws/devel/lib/assign_goals/: assign_goals_node
swarm-playground/main_ws/devel/lib/local_sensing_node/: pcl_render_node
swarm-playground/main_ws/devel/lib/manual_take_over/: manual_take_over  manual_take_over_station
swarm-playground/main_ws/devel/lib/odom_visualization/: odom_visualization
swarm-playground/main_ws/devel/lib/pkgconfig/: assign_goals.pc  drone_detect.pc  ego_planner.pc  local_sensing_node.pc  manual_take_over.pc  map_generator.pc  mockamap.pc  moving_obstacles.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  poscmd_2_odom.pc  pose_utils.pc  px4_realsense_bridge.pc  quadrotor_msgs.pc  random_goals.pc  rviz_plugins.pc  selected_points_publisher.pc  so3_control.pc  so3_quadrotor_simulator.pc  swarm_bridge.pc  traj_opt.pc  traj_utils.pc  uav_utils.pc  vision_to_mavros.pc
swarm-playground/main_ws/devel/lib/poscmd_2_odom/: poscmd_2_odom
swarm-playground/main_ws/devel/lib/px4_realsense_bridge/: px4_realsense_bridge_node
swarm-playground/main_ws/devel/lib/random_goals/: random_goals_node
swarm-playground/main_ws/src/planner/point_mass_trajectory_generation/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/planner/point_mass_trajectory_generation/include/: PointMassPathSearching.h
swarm-playground/main_ws/src/planner/point_mass_trajectory_generation/src/: PointMassPathSearching.cpp  test_point_mass_trajectory.cpp
(+62 files in other folders)
